passes all tests

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
     />
     <!-- FONT AWESOME END -->
     <!-- FCC START -->
-    <script
+    <!-- <script
       src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"
       defer
-    ></script>
+    ></script> -->
     <!-- FCC END -->
     <title>React Pomodoro Clock</title>
   </head>
