--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,12 @@
       crossorigin="anonymous"
     />
     <!-- FONT AWESOME END -->
+    <!-- FONT ROBOTO MONO START -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- FONT ROBOTO MONO END -->
     <!-- FCC START -->
     <!-- <script
       src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"
